--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -1,13 +1,19 @@
 # Introduction to Statistical Inference {#inference}
 
 ```{r set-up, echo = F, message = F}
+library(tidyverse) 
+
 max_count <- function(dist) {
-  ggp_data <- ggplot_build(dist)
-  max(ggp_data$data[[1]]$count)}
+  max(ggplot_build(dist)$data[[1]]$count)
+}
 
 max_x <- function(dist){ 
+  max(ggplot_build(dist)$data[[1]]$xmax)
+}
+
+min_x <- function(dist) {
   ggp_data <- ggplot_build(dist)
-  max(ggp_data$data[[1]]$xmax)
+  min(ggp_data$data[[1]]$xmin)
 }
 
 ```
@@ -180,7 +186,7 @@ estimates <- sample_1 %>%
              sample_sd = sd(price))
 estimates
 ```
-Remember that the population mean was \$`r round(population_parameters$pop_mean,2)` and the population standard deviation was \$`r round(population_parameters$pop_sd,2)`. We see that our point estimates for the mean and standard deviation are \$`r round(estimates$sample_mean,2)` and  \$`r round(estimates$sample_sd,2)` respectively. So how good was our estimate? Remember in practice, we don't usually have access to population data. If we took another random sample from the population then the value of our statistic may change. So we might want to consider how far an estimate of the parameter could be away from the true population parameter? We might also want to know how often that might occur? Therefore again it will help to investigate the set of all possible values that a statistic could take on. 
+Remember that the population mean was \$`r round(population_parameters$pop_mean,2)` and the population standard deviation was \$`r round(population_parameters$pop_sd,2)`. We see that our point estimates for the mean and standard deviation are \$`r round(estimates$sample_mean, 2)` and  \$`r round(estimates$sample_sd,2)` respectively. So how good was our estimate? Remember in practice, we don't usually have access to population data. If we took another random sample from the population then the value of our statistic may change. So we might want to consider how far an estimate of the parameter could be away from the true population parameter? We might also want to know how often that might occur? Therefore again it will help to investigate the set of all possible values that a statistic could take on. 
 ```{r 10-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 20"}
 samples <- rep_sample_n(airbnb, size = 20, reps = 1500)
 head(samples)
@@ -213,7 +219,7 @@ grid.arrange(population_distribution + ggtitle("Distribution of population"),
 
 Can we do better than that? What if we increase the sample size? Again we will take a random sample of a certain size from the population, calculate the the sample mean and then do that repeatedly. You can compare the population distribution and the sampling distributions for samples of size 20, 50 and 100 below. 
 
-```{r 10-example-means6, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of population distribution and sampling distributions for sizes 20, 50 and 100"}
+```{r 10-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 50 and n = 100 
 sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 1500) %>% 
     group_by(replicate) %>% 
@@ -227,53 +233,49 @@ sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 1500) %>%
 sampling_distribution_50 <-  ggplot(sample_estimates_50, aes(x = sample_mean)) +
     geom_histogram(fill="#0072B2", color="#e9ecef") +
     xlab("Sample mean price per night($)") +
-    ggtitle("n = 50")
+    ggtitle("n = 50") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 100 
 sampling_distribution_100 <-  ggplot(sample_estimates_100, aes(x = sample_mean)) +
     geom_histogram(fill="#0072B2", color="#e9ecef") +
     xlab("Sample mean price per night ($)") +
-    ggtitle("n = 100") 
+    ggtitle("n = 100") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
+```
 
-grid.arrange(
-  # population
-  population_distribution + 
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of population distribution and sampling distributions for sizes 20, 50 and 100"}
+annotated_population <- population_distribution + 
     geom_vline(xintercept = round(population_parameters$pop_mean,1), col = "red") +
     ggtitle("Population distribution")  + 
     annotate("text", x = max_x(population_distribution), y= max_count(population_distribution), hjust = 1, vjust = 1, 
              label = paste("mean = ", round(population_parameters$pop_mean,1))) +
     annotate("text", x =  max_x(population_distribution), y = max_count(population_distribution), hjust = 1, vjust = 3,
-             label = paste("sd = ", round(population_parameters$pop_sd,1))), 
+             label = paste("sd = ", round(population_parameters$pop_sd,1)))
 
-  # n = 20 
-  sampling_distribution_20 + 
+annotated_sampling_dist_20 <- sampling_distribution_20 + 
     geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") +
-    xlim(80, 250) + 
+    xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20)) + 
     ggtitle("n = 20") + 
     annotate("text", x = max_x(sampling_distribution_20), y= max_count(sampling_distribution_20), hjust = 1, vjust = 1,
              label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1)))+
     annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 3,
-               label = paste("sd = ", round(sd(sample_estimates$sample_mean), 1))),
+               label = paste("sd = ", round(sd(sample_estimates$sample_mean), 1)))
 
-  # n = 50          
-   sampling_distribution_50 + 
+annotated_sampling_dist_50 <- sampling_distribution_50 + 
     geom_vline(xintercept = mean(sample_estimates_50$sample_mean), col = "red") +
-    xlim(80, 260) + 
-    annotate("text", x = max_x(sampling_distribution_50), y= max_count(sampling_distribution_50), hjust = 1, vjust = 1,
-             label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1)))+
-    annotate("text", x =  max_x(sampling_distribution_50), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
-                 label = paste("sd = ", round(sd(sample_estimates_50$sample_mean), 1))),
+    ## x limits set the same as n = 20 graph, y is this graph 
+    annotate("text", x = max_x(sampling_distribution_20), y= max_count(sampling_distribution_50), hjust = 1, vjust = 1,
+             label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1))) +
+    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
+                 label = paste("sd = ", round(sd(sample_estimates_50$sample_mean), 1)))
 
-  # n = 100           
-  sampling_distribution_100 + 
-    geom_vline(xintercept = mean(sample_estimates_100$sample_mean), col = "red")+
-    xlim(80, 250) + 
-    annotate("text", x =  max_x(sampling_distribution_100), y = max_count(sampling_distribution_100), hjust = 1, vjust = 1,
+annotated_sampling_dist_100 <- sampling_distribution_100 + 
+    geom_vline(xintercept = mean(sample_estimates_100$sample_mean), col = "red") +
+    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 1,
              label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 1)))+
-    annotate("text", x =  max_x(sampling_distribution_100), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
-               label = paste("sd = ", round(sd(sample_estimates_100$sample_mean), 1))),
+    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
+               label = paste("sd = ", round(sd(sample_estimates_100$sample_mean), 1)))
 
-  nrow = 2, ncol = 2) 
+grid.arrange(annotated_population, annotated_sampling_dist_20, annotated_sampling_dist_50, annotated_sampling_dist_100,  nrow = 2, ncol = 2) 
 ```
 
 What do we notice? The center of the sample mean values are equal to the population mean as indicated by the red vertical line. Also when the sample size increases the sample mean shows less variability, and therefore we get more precise estimates of the population parameter.
@@ -284,25 +286,33 @@ When sampling from a finite population
 Finite population correction 
 
 ### Summary
-- A sampling distribution of a statistics is the distribution of the statistic for all possible samples from the same population of a given sample size.
-- The sample means and proportions calculated from samples drawn from populations were centered around the population parameters we were trying to estimate.
--	The spread of the sampling distribution is related to the sample size. As the sample size increases the spread of the distribution decreases. 
-- The shape of the sampling distribution is bell-shaped with one peak and centered at the population mean or proportion.
+1. A sampling distribution of a statistics is the distribution of the statistic for all possible samples from the same population of a given sample size.
+2. The sample means and proportions calculated from samples drawn from populations were centered around the population parameters we were trying to estimate.
+3.	The spread of the sampling distribution is related to the sample size. As the sample size increases the spread of the distribution decreases. 
+4. The shape of the sampling distribution is bell-shaped with one peak and centered at the population mean or proportion.
 
 ## Bootstrapping 
-### Bootstrap distribution
-```{r 10-bootstrapping-set-up, echo = FALSE, message = FALSE, warning = FALSE}
-n <- 40
-```
-We saw that our sample mean and sample proportions centered around the population parameter we were trying to estimate.	When we estimate the unknown parameter of interest using a single value we are doing **point estimation**, which is a form of statistical inference. However, we saw above that many of the estimates we take won't be the exact value of the population quantity we are trying to estimate. So what can we do? Perhaps we can give some sort of plausible range where we might expect the true population parameter to fall rather than just reporting a single value. In the next section, we will learn about **interval estimation** and construct confidence intervals. 
+### Bootstrapping Overview 
 
-In order to construct a confidence interval we need information about the sampling distribution. We saw above how we could construct a sampling distribution when population values were known. What if population values are not known? (which is usually the case) One method we can use is bootstrapping. If we have sample data, then we can use bootstrapping methods to construct a bootstrap sampling distribution and construct a confidence interval. Bootstrapping is a procedure where we use data from a single sample to generate a distribution by repeatedly sampling with replacement from our sample data. In the this section we will explore how to create a bootstrap distribution from a single sample using R.
+We saw that our sample mean and sample proportions centered around the population parameter we were trying to estimate.	When we estimate the unknown parameter of interest using a single value we are doing **point estimation**, which is a form of statistical inference. However, we saw above that many of the estimates we take won't be the exact value of the population quantity we are trying to estimate. So what can we do? Perhaps we can give some sort of plausible range of values for the true population parameter rather than just reporting a single value. In the next section, we will learn about **interval estimation** and construct **confidence intervals**. 
 
+We could construct confidence intervals based on information from a sampling distribution. However, we would need certain conditions and assumptions to do so. Another method we could use is called **bootstrapping**, which can be used to construct a bootstrap distribution and confidence interval given certain sample data. Bootstrapping is a procedure where we use data from a single sample from the population to generate a distribution by repeatedly sampling with replacement from our original sample data. In the this section we will explore how to create a bootstrap distribution from a single sample using R.
 
+For a sample of size $n$, the process we will go through is as follows: 
+
+1. Randomly select an observation from the original sample, which was drawn from the population
+2. Record the observation's value 
+3. Replace that observation
+4. Repeat steps 1 - 3 (sampling with replacement) until you have $n$ observations, which form a bootstrap sample
+5. Calculate the bootstrap point estimate (e.g., mean, median, proportion, slope, etc.) of the $n$ observations in your bootstrap sample
+6. Repeat steps (1) - (5) many times to create a distribution of point estimates (bootstrap distribution)
+7. Calculate the plausible range of values around our observed point estimate
+
+### Bootstrapping in R 
 Let's continue working with our Airbnb data. Again let's say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada. Let's draw a single sample of size `r n` from the population and visualize the distribution of the sample:
 ```{r 10-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 20"}
 one_sample <- airbnb %>% 
-    rep_sample_n(n) %>% 
+    rep_sample_n(40) %>% 
     ungroup() %>% # ungroup the data frame 
     select(price) # drop the replicate column 
 head(one_sample)
@@ -319,11 +329,11 @@ one_sample_estimates
 ```
 We can see that the distribution of the sample is skewed with a few observations out to the right and the mean of the sample is \$`r round(one_sample_estimates$sample_mean,2)`. Remember in practice, we usually only have one sample from the population. So this sample and estimate is what we have to work with.
 
-Now we will generate a single bootstrap sample in R using the sample that we just took. We will use the `rep_sample_n` function as we did when we were creating our sampling distribution. Since we want to sample with replacement we change the argument for `replace` from its default value of `FALSE` to `TRUE`.
+Now we do the steps 1 - 5 above to generate a single bootstrap sample in R using the sample that we just took and calculate the bootstrap estimate for that sample. We will use the `rep_sample_n` function as we did when we were creating our sampling distribution. Since we want to sample with replacement we change the argument for `replace` from its default value of `FALSE` to `TRUE`.
 
 ```{r 10-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE}
 boot1 <- one_sample %>%
-    rep_sample_n(size = n, replace = TRUE, reps = 1)
+    rep_sample_n(size = 40, replace = TRUE, reps = 1)
 head(boot1)
 boot1_dist <- ggplot(boot1, aes(price)) + 
     geom_histogram(fill="#0072B2", color="#e9ecef") +
@@ -334,36 +344,33 @@ boot1_dist
 
 summarise(boot1, mean = mean(price))
 ```
-Notice that our bootstrap distribution has a similar shape to the original sample distribution. Though, the shapes of the distributions are similar they are not identical. You'll also notice that the means of the sample and the bootstrap sample differ. How might that happen? Well remember that we are sampling with replacement from the original sample so we don't end with the original sample values again. We are trying to mimic drawing another sample from the population, without actually having to do that.
+Notice that our bootstrap distribution has a similar shape to the original sample distribution. Though, the shapes of the distributions are similar they are not identical. You'll also notice that the original sample mean and the bootstrap sample mean differ. How might that happen? Remember that we are sampling with replacement from the original sample so we don't end up with exactly the same original sample values again. We are trying to mimic drawing another sample from the population, without actually having to do that.
 
-Let's now take 1000 bootstrap samples from the original sample we drew from the population (`one_sample`)  using `rep_sample_n` and calculate the the means for each of those replicates.
+Let's now take 1500 bootstrap samples from the original sample we drew from the population (`one_sample`)  using `rep_sample_n` and calculate the the means for each of those replicates.
 ```{r 10-bootstrapping4, echo = TRUE, message = FALSE, warning = FALSE}
-
-
-boot1000 <- one_sample %>%
-    rep_sample_n(size = n, replace = TRUE, reps = 1000)
-head(boot1000)
-tail(boot1000)
-boot1000_means <- boot1000 %>% 
+boot1500 <- one_sample %>%
+    rep_sample_n(size = 40, replace = TRUE, reps = 1500)
+head(boot1500)
+tail(boot1500)
+boot1500_means <- boot1500 %>% 
   group_by(replicate) %>% 
   summarize(mean = mean(price))
-head(boot1000_means)
-tail(boot1000_means)
+head(boot1500_means)
+tail(boot1500_means)
 ```
 
-Why are we doing this? As mentioned earlier, in reality we typically only have one sample and we can sample from that original sample with replacement (i.e., bootstrapping) many times to create many bootstrap samples. We can then calculate point estimates for each bootstrap sample and create a bootstrap distribution of our point estimates. Finally this bootstrap distribution of our point estimates suggests how we might expect our point estimate to behave if we took another sample.
+Why are we doing this? As mentioned earlier, in reality we typically only have one sample and we can sample from that original sample with replacement (i.e., bootstrapping) many times to create many bootstrap samples. We can then calculate point estimates for each bootstrap sample and create a bootstrap distribution of our point estimates. This bootstrap distribution of our point estimates suggests how we might expect our point estimate to behave if we took another sample.
 
 ```{r 10-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
-boot_est_dist <-  ggplot(boot1000_means, aes(x = mean)) +
+boot_est_dist <-  ggplot(boot1500_means, aes(x = mean)) +
     geom_histogram(fill="#0072B2", color="#e9ecef") +
     xlab("Sample mean price per night ($)") 
-boot_est_dist
 ```
 
-Let's compare our bootstrap distribution with our sampling distribution. What do you notice? 
+Let's compare our bootstrap distribution with a sampling distribution. What do you notice? 
 ```{r 10-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution"}
 
-samples <- rep_sample_n(airbnb, size = 40, reps = 1000)
+samples <- rep_sample_n(airbnb, size = 40, reps = 1500)
 
 sample_estimates <- samples %>% 
     group_by(replicate) %>% 
@@ -371,52 +378,144 @@ sample_estimates <- samples %>%
 
 sampling_dist <-  ggplot(sample_estimates, aes(x = sample_mean)) +
     geom_histogram(fill="#0072B2", color="#e9ecef") +
-    xlab("Sample mean price per night (years)") +
-  annotate("text", 210, 100, label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1)))+ 
+    xlab("Sample mean price per night (years)")
+
+sampling_dist <- sampling_dist +
+  annotate("text", x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust =1,
+           label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))) + 
+  annotate("text", x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust =3,
+           label = paste("sd = ", round(sd(sample_estimates$sample_mean), 1))) + 
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red")
 
-boot_est_dist <- boot_est_dist + 
-  annotate("text", x = 170, y = 125, label = paste("mean = ", round(mean(boot1000_means$mean), 1))) + 
-  geom_vline(xintercept = mean(boot1000_means$mean), col = "red")
+annotated_boot_est_dist <- boot_est_dist + 
+  annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =1,
+           label = paste("mean = ", round(mean(boot1500_means$mean), 1))) + 
+    annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =3,
+           label = paste("sd = ", round(sd(boot1500_means$mean), 1))) + 
+  geom_vline(xintercept = mean(boot1500_means$mean), col = "red")
 
-grid.arrange(sampling_dist + xlim(80, 250) + ggtitle("Sampling distribution"), 
-             boot_est_dist + xlim(80, 210) + ggtitle("Bootstrap distribution"),
+grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + ggtitle("Sampling distribution"), 
+             annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution"),
              ncol = 2)
 ```
+First we see how the sampling distribution is centered at \$`r round(mean(airbnb$price),2)`, the population mean value. The sampling is done at random and the estimates are centered at the population mean as we learned in the previous section. However, the bootstrap distribution is centered at \$`r round(mean(boot1500_means$mean), 2)`, which is the original sample's mean price per night. Remember that we are resampling from the original sampling over and over again so we see that the bootstrap distribution is centered at the original sample's mean value. We also notice that the shape and spread of the two distributions are somewhat similar. 
 
-```{r}
-grid.arrange(population_distribution + ggtitle("Distribution of population"), one_sample_dist, ncol = 2)
+
+```{r 10-bootstrapping7, echo = F, message = FALSE, warning = FALSE, fig.cap = "Summary of bootstrapping process"}
+pop_dist <- population_distribution + ggtitle("Population") + xlab("Price") +
+  theme(axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank())
+
+sam_dist <- one_sample_dist + ggtitle("Sample")+ xlab("Price") +
+  theme(axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank())
+set.seed(2)
+boot2 <- one_sample %>%
+    rep_sample_n(size = 40, replace = TRUE, reps = 1)
+
+set.seed(3)
+boot3 <- one_sample %>%
+    rep_sample_n(size = 40, replace = TRUE, reps = 1)
+
+boot1_dist <- boot1_dist + ggtitle("Sample with Replacement") + 
+  theme(axis.title.x = element_blank(), 
+        axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank())
+        
+boot2_dist <- ggplot(boot2, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") + 
+  theme(axis.title.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank())
+
+boot3_dist <- ggplot(boot3, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") + xlab("Price") +
+  theme(axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank()) 
+
+bootstrap_dist <- boot_est_dist+ ggtitle("Bootstrap distribution") + xlab("Sample means") + 
+    theme(axis.ticks.x = element_blank(),
+        axis.text.x = element_blank(), 
+        axis.title.y =element_blank(), 
+        axis.ticks.y = element_blank(),
+        axis.text.y = element_blank()) 
+
+require(grid)
+mygb = function(x,y) {
+  grid.bezier(x=x, y=y, gp=gpar(fill="black"), 
+              arrow=arrow(type="closed", length=unit(2,"mm")))
+}
+
+grid.arrange(pop_dist, 
+             sam_dist, 
+             boot1_dist, 
+             boot2_dist, 
+             boot3_dist,
+             bootstrap_dist,
+  widths = c(1, 1, 1, 1, 1),
+  layout_matrix = rbind(c(1, NA, 3, NA, 6),
+                        c(1, 2, 4, NA, 6),
+                        c(1, NA, 5, NA, 6)
+)) 
+# pop to sample 
+mygb(x=c(0.15,0.3,0.3,0.3), y=c(0.8,0.8,0.65,0.65))
+
+# sample to resamples
+mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.55,0.55,0.8,0.8))
+mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.5,0.5,0.5,0.5))
+mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.45,0.45,0.2,0.2))
+
+#resamples to statistics
+mygb(x=c(0.6,0.6,0.65,0.65), y=c(0.8,0.8,0.8,0.8))
+mygb(x=c(0.6,0.6,0.65,0.65), y=c(0.5,0.5,0.5,0.5))
+mygb(x=c(0.6,0.6,0.65,0.65), y=c(0.2,0.2,0.2,0.2))
 ```
 
-**Center**: First we see how the sampling distribution is centered at \$`r round(mean(airbnb$price),2)`, the population mean value. The sampling is done at random and the estimates are centered at the population mean as we learned in the previous section. However, the bootstrap distribution is centered at \$`r round(mean(boot1000_means$mean), 2)`, which is the original sample's mean price per night. Remember that we are resampling from the original sampling over and over again. 
-**Shape & Spread**: Now the shape and spread of the two distributions are somewhat similar. 
-
-*** Fix this!!! 
-The bootstrap distribution is centered at the original sample’s mean, so it doesn’t necessarily provide a better estimate of the true population mean. 
-The bootstrap distribution will likely not have the same center as the sampling distribution. In other words, bootstrapping cannot improve the quality of an estimate.
-
-Second, let’s now compare the spread of the two distributions: they are somewhat similar. Even if the bootstrap distribution might not have the same center as the sampling distribution, it will likely have very similar shape and spread. In other words, bootstrapping will give you a good estimate of the standard error.
-
-
 ### Using bootstrapping to calculate a plausible range  
+Now that we have constructed our bootstrap distribution, let's use it to create a confidence interval for the mean, a range of plausible values for the population mean. Confidence intervals can be set at different levels, common levels are 90\%, 95\% and 99\%. There is a balance between the your level of confidence and the precision of your interval so the confidence level you choose will depend on your application. Suppose we want to construct a 95\% confidence interval using the bootstrap distribution we found earlier.
 
+To calculate a 95% confidence interval using bootstrapping: 
 
-Once we have created a bootstrap distribution, we can use it to suggest a plausible range where we might expect the true population quantity to lie. One formal name for a commonly used plausible range is called a confidence interval. Confidence intervals can be set at different levels, an example of a commonly used level is 95%. When we report a point estimate with a 95% confidence interval as the plausible range, formally we are saying that if we repeated this process of building confidence intervals more times with more samples, we’d expect ~ 95% of them to contain the value of the population quantity.
+1. Arrange the observations in the bootstrap distribution in ascending order 
+2. Find the 2.5\% percentile, the value such that 2.5\% of observations fall below it, and use that as the lower bound of the interval 
+3. Find the 97.5\% percentile, the value such that 97.5\% of observations fall below it, and use that as the upper bound of the interval
 
-How do you choose a level for a confidence interval? You have to consider the downstream application of your estimation and what the cost/consequence of an incorrect estimate would be. The higher the cost/consequence, the higher a confidence level you would want to use. You will learn more about this in later Statistics courses.
+To do this in R, we can use the `quantile()` function:
 
-To calculate a 95% confidence interval using bootstrapping, we essentially order the values in our bootstrap distribution and then take the value at the 2.5th percentile as the lower bound of the plausible range, and the 97.5th percentile as the upper bound of the plausible range.
+```{r 10-bootstrapping8, echo = T, message = FALSE, warning = FALSE}
+bounds <- boot1500_means %>% 
+    select(mean) %>% 
+    pull() %>% 
+    quantile(c(0.025, 0.975))
+bounds
+```
 
-### Summary 
+We're 95\% "confident" that the true population mean price per night of Airbnb listings in Vancouver is between \$`r round(bounds[1],2) ` and \$`r round(bounds[2],2)`. This means if we repeated this process of sampling and constructing confidence intervals more times with more samples, we’d expect 95\% of intervals would contain the true population parameter. 
 
-If you have a sample of size $n$. The process of bootstrapping is as follows: 
-1. Randomly select an observation from the original sample (which was drawn from the population)
-2. Record the observation's value 
-3. Replace that observation
-4. Repeat steps 1 - 3 until you have $n$ observations, which form a bootstrap sample
-5. Calculate the bootstrap point estimate (e.g., mean, median, proportion, slope, etc.) of the $n$ observations in your bootstrap sample
-6. Repeat steps (1) - (5) many times to create a bootstrap distribution - a distribution of bootstrap point estimates
-7. Calculate the plausible range of values around our observed point estimate
+```{r 10-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with 95% confidence interval lower and upper bounds"}
+boot_est_dist + 
+  geom_vline(xintercept = bounds, col = "#E69F00", size = 2, linetype = 2) + 
+  annotate("text", x = bounds[1], max_count(boot_est_dist), hjust = 0.5, vjust =2,
+           label = paste("2.5th percentile =", round(bounds[1], 2))) + 
+    annotate("text", x = bounds[2], max_count(boot_est_dist), hjust = 0.5, vjust =2,
+           label = paste("97.5th percentile =", round(bounds[2], 2)))
+```
+Here we notice that our 95\% confidence interval does indeed contain the true population mean value, \$`r round(mean(airbnb$price),2)`\! However, remember that in reality we would not actually know whether our interval captured the true population parameter or not because we usually only have a single sample not the entire population.
 
 ## Additional readings
 
