--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -20,26 +20,29 @@ min_x <- function(dist) {
 
 
 ## Overview
-Recall from Chapter 1, one of the data analysis questions we often want to answer is an *inferential question*. We make conclusions about some unknown aspect of a population of interest based on observed data sampled from that population. Statistical inference is a data analysis question where we want to look for patterns, trends, or relationships in a dataset and decide how applicable these findings are to the wider population. This chapter will start with some fundamental ideas of sampling, and we will work our way to introduce two forms of statistical inference:
-
-* Point Estimation  
-* Interval Estimation
-
-Point estimation and interval estimation are two methods of making conclusions about the population using our sample. The term "statistical inference" encompasses a wide range of techniques, and there are many complexities for performing inference. There are other inference methods that we will not discuss in this chapter. However, this chapter will provide you with a broad introduction to sampling and statistical inference. 
+In almost all data analysis tasks in practice, we want to draw conclusions about some unknown
+aspect of a population of interest based on observed data sampled from that
+population; we typically do not get data on the *full* population.
+Data analysis questions regarding how summaries, 
+patterns, trends, or relationships in a dataset 
+extend to the wider population are called *inferential questions*. This chapter will start
+with the fundamental ideas of sampling from populations, and then will work towards
+introducing two common techniques in statistical inference: *point estimation* and
+*interval estimation*. 
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Describe real-world examples of questions that can be answered with the statistical inference methods.
-* Name common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sample data, and use computation to estimate these.
+* Describe real-world examples of questions that can be answered with the statistical inference.
+* Define common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
 * Define the following statistical sampling terms (population, sample, population parameter, point estimate, sampling distribution).
 * Explain the difference between a population parameter and sample point estimate.
 * Use R to draw random samples from a finite population.
 * Use R to create a sampling distribution from a finite population.
 * Describe how sample size influences the sampling distribution.
 * Define bootstrapping.
-* Use R to created bootstrap distribution to approximate a sampling distribution.
-* Contrast bootstrap and sampling distributions.
+* Use R to create a bootstrap distribution to approximate a sampling distribution.
+* Contrast the bootstrap and sampling distributions.
 
 ## Why do we need sampling? 
 Statistical inference can help us decide if differences we observe between groups' responses exist in the broader population. We might use statistical inference to help us answer questions, such as
